(cleanup) javatest/cof: eliminating Integer constructor calls with primitive argument